Found what caused the horizontal scrolling in smaller screens and fixed it

--- a/style.css
+++ b/style.css
@@ -318,7 +318,7 @@ footer {
     flex-direction: row;
     flex-wrap: wrap;
     width: 100%;
-    margin-left: 15px;
+    margin-left: 0;
   }
   
   .other-one {
